Made Identity in the DFG allocate a new temp register and move the old data to it. https://bugs.webkit.org/show_bug.cgi?id=140700 <rdar://problem/19339106>

Reviewed by Filip Pizlo.

* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
Added scratch registers for Identity.
* tests/mozilla/mozilla-tests.yaml: enabled previously failing test


Canonical link: https://commits.webkit.org/158683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178788 268f45cc-cd09-0410-ab3c-d52691b4dbfc